# rule-smith

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO.md  README.md  pyproject.toml  requirements.txt
demo/: NOTES.html  NOTES.md  NOTES.pptx
diagram/: ARCHITECTURE.excalidraw  build_arch.py
examples/: WALKTHROUGH.md  github-action.yml
rules/: adjacent_same_type_positional_params.py  assert_no_side_effects.py  assign_then_immediately_return.py  assignment_in_condition.py  atomic_get_set_race.py  bigdecimal_from_double_literal.py  blocking_call_while_holding_lock.py  boolean_blindness_multi_flag_params.py  boolean_selector_param.py  boxed_integer_long_comparison.py  broad_exception_catch.py  broken_null_check_logic.py  builder_terminal_before_setters.py  closeable_must_close.py  collection_return_no_null.py  collection_return_null.py  command_query_separation.py  commented_out_code.py  compare_nonnull_to_null.py  condition_always_constant.py  constructor_definite_assignment.py  cyclomatic_complexity_too_high.py  data_clump_recurring_param_group.py  dead_exception_construction.py  dead_private_member.py  dead_store.py  declare_collection_interface_type.py  disabled_hostname_verification.py  double_map_lookup.py  dropped_async_stream_result.py  empty_catch_block.py  enum_switch_default.py  equals_between_incompatible_types.py  equals_hashcode_pair.py  equals_param_must_be_object.py  exhaustive_sealed_enum_switch.py  explicit_gc_call.py  expose_mutable_collection_type.py  expression_language_injection.py  feature_envy.py  (+144 more)
rulesmith/: __init__.py  _tmpcheck.py  (+10 more)
(+789 files in other folders)
